@@ -6,10 +6,9 @@
 
 char const * const scpc_orbId = "testDllOrb";
 
-ACE_TCHAR const * const scpc_loadOrb = ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE(
+ACE_TCHAR const * const scpc_loadOrb = ACE_DYNAMIC_SERVICE_DIRECTIVE(
   "testDllOrb",
   "bug2936",
-  TAO_VERSION,
   "_make_DllORB",
   "testDllOrb -ORBDebugLevel 0 -ORBId testDllOrb -ORBDottedDecimalAddresses 1"
 );
@@ -17,10 +16,9 @@ ACE_TCHAR const * const scpc_loadOrb = ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE(
 ACE_TCHAR const * const scpc_unloadOrb = ACE_REMOVE_SERVICE_DIRECTIVE("testDllOrb");
 
 
-ACE_TCHAR const * const scpc_loadPersistentPoa = ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE(
+ACE_TCHAR const * const scpc_loadPersistentPoa = ACE_DYNAMIC_SERVICE_DIRECTIVE(
   "testPersistentPoa",
   "bug2936",
-  TAO_VERSION,
   "_make_PersistentPoa",
   "testPersistentPoa testDllOrb"
 );
